<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddFood"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <EditText
        android:id="@+id/edt_food_name"
        android:hint="@string/taom_noma"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edt_food_recourse"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/addfoodfon"
        android:padding="20dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_food_recourse"
        android:hint="@string/kerakli_mahsulotlar"
        android:background="@drawable/addfoodfon"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/edt_food_makes"
        android:padding="20dp"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_food_name"/>

    <EditText
        android:id="@+id/edt_food_makes"
        android:hint="@string/taom_tayyorlash_tartibi"
        android:background="@drawable/addfoodfon"
        android:padding="20dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:gravity="start"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/edt_food_recourse"/>

    <Button
        android:id="@+id/btn_save"
        android:textAlignment="center"
        android:text="@string/saqlash"
        android:backgroundTint="@color/green"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_food_makes"
        android:layout_width="0dp"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintWidth_percent="0.35"
        android:layout_height="0dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>