<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".AboutFood">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_name"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_need_recourse"
            android:text="@string/kerakli_mahsulotlar"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_recourse"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textColor="@color/black"
           android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_makefoor"
            android:text="@string/taom_tayyorlash_tartibi"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_make_food"
            android:text="@string/taom_tayyorlash_tartibi"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="20dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




    </LinearLayout>


</ScrollView>